--- a/index.html
+++ b/index.html
@@ -31,19 +31,37 @@
           </div>
         </div>
         <div class="middle">
-          <div class="md1">1</div>
-          <div class="md2">2</div>
-          <div class="md3">3</div>
-          <div class="md4">4</div>
+          <div class="md1">
+            <p>Total Question's<br />200,000</p>
+          </div>
+          <div class="md2">
+            <p>Total Answer's<br />105,000</p>
+          </div>
+          <div class="md3">
+            <p>Participated<br />10,000</p>
+          </div>
+          <div class="md4">
+            <p>Total Passed<br />6,000</p>
+          </div>
         </div>
         <div class="bottom">
           <div class="b-left">
-            <div style="background-color: #bce0f6; color: black">1</div>
-            <div>2</div>
-            <div>3</div>
+            <div style="background-color: #bce0f6; color: black; border: 0">
+              YOUR INFO
+            </div>
+            <div>BOOKMARKS</div>
+            <div>SETTINGS</div>
           </div>
           <div class="b-right">
-            big box
+            <div>
+              <h2>Your Information</h2>
+              <p>
+                Name: Sumit Sharma<br />
+                Email: example@gmail.com<br />
+                Phone: +91-1234567890<br />
+                Marks: 500.00
+              </p>
+            </div>
             <button>Next</button>
           </div>
         </div>
