--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#about">About Us</a>
         <a href="#info">Information</a>
         <a href="#more">More <img src="images/Vector.png" alt="" /></a>
-        <input type="text" placeholder="Search" id="" />
+        <input type="text" placeholder="Search..." id="" i />
       </div>
       <!-- Burger Menu -->
       <div><img src="images/Vector-1.png" alt="" /></div>
@@ -26,8 +26,10 @@
             <img src="images/image 4.png" alt="" />
           </div>
           <div class="top-right">
-            It's not only writers who can benefit from this free online tool. If
-            you're a programmer who's working on a ......
+            <p>
+              It's not only writers who can benefit from this free online tool.
+              If you're a programmer who's working on a ......
+            </p>
           </div>
         </div>
         <div class="middle">
@@ -46,7 +48,14 @@
         </div>
         <div class="bottom">
           <div class="b-left">
-            <div style="background-color: #bce0f6; color: black; border: 0">
+            <div
+              style="
+                background-color: #bce0f6;
+                color: black;
+                border: 0;
+                box-shadow: 0px 6px 35px 0px #00000063;
+              "
+            >
               YOUR INFO
             </div>
             <div>BOOKMARKS</div>
@@ -62,7 +71,7 @@
                 Marks: 500.00
               </p>
             </div>
-            <button>Next</button>
+            <button>Next <img src="images/Arrow1.png" alt="" /></button>
           </div>
         </div>
       </div>
