--- a/index.html
+++ b/index.html
@@ -65,16 +65,19 @@
             <div>
               <h2>Your Information</h2>
               <p>
-                Name: Sumit Sharma<br />
-                Email: example@gmail.com<br />
-                Phone: +91-1234567890<br />
-                Marks: 500.00
+                <strong>Name :</strong> Sumit Sharma<br />
+                <strong>Email :</strong> example@gmail.com<br />
+                <strong>Phone :</strong> +91-1234567890<br />
+                <strong>Marks :</strong> 500.00
               </p>
             </div>
             <button>Next <img src="images/Arrow1.png" alt="" /></button>
           </div>
         </div>
       </div>
+      <div class="sharebtn"><img src="images/Frame 1.png" alt="" /></div>
+      <div class="chatbox"><img src="images/Group 2.png" alt="" /></div>
+      <script src="sharebtn.js"></script>
     </div>
   </body>
 </html>
